# MCPeek

./: .gitignore  CLAUDE.md  MCPeek_Architecture.md  README.md  pyproject.toml  requirements.txt  setup.py  test_tool_tickle.py
.github/workflows/: claude-code-review.yml  claude.yml
src/mcpeek/: __init__.py  __main__.py  auth.py  cli.py  config.py  discovery.py  execution.py  mcp_client.py  version_detection.py  web.py
src/mcpeek/formatters/: __init__.py  base.py  json.py  markdown.py  table.py
src/mcpeek/transports/: __init__.py  base.py  http.py  stdio.py
src/mcpeek/utils/: __init__.py  exceptions.py  helpers.py  logging.py
web/: .env.example  .gitignore  README.md  README_GUI.md  __init__.py  launcher.py  mcpeek-web  mcpeek_web.py  pytest.ini  requirements.txt  start.sh
web/backend/: app.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/coverage/: clover.xml  coverage-final.json  lcov.info
web/frontend/coverage/lcov-report/: index.html
web/frontend/coverage/lcov-report/src/: App.js.html  index.html  index.js.html
web/frontend/coverage/lcov-report/src/components/: MCPInterface.js.html  MatrixRain.js.html  StatusBar.js.html  Terminal.js.html  index.html
web/frontend/public/: index.html  manifest.json
web/frontend/src/: App.css  App.js  App.tsx  index.css
web/frontend/src/components/: Header.tsx  HelpPanel.tsx  MCPInterface.js  MatrixRain.js  MatrixRain.tsx  StatusBar.js  StatusBar.tsx  Terminal.js  Terminal.tsx
web/frontend/src/components/__tests__/: MatrixRain.test.js  Terminal.test.js
web/frontend/src/services/: api.ts
web/frontend/src/styles/: GlobalStyle.ts
web/tests/: test_backend.py
